CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set(CMAKE_CXX_COMPILER "g++") 
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -Wall") 
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -finline-limit=1000 -DNDEBUG") 
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin) 
add_definitions(-std=c++11)



PROJECT (LOG)
SET(SRC_LIST 
Log.cpp
LogImpl.cpp
LogStream.cpp
UnitTest.cpp
)



AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src DIR_SRCS)
MESSAGE(STATUS "dir src:" +${DIR_SRCS})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
ADD_EXECUTABLE(LogTest ${DIR_SRCS})
FIND_PACKAGE ( Threads REQUIRED )
TARGET_LINK_LIBRARIES ( LogTest ${CMAKE_THREAD_LIBS_INIT} )
